<resources>
    <string name="app_name" translatable="true">My Notes</string>
    <string name="add_note" translatable="true">Add Note</string>
    <string name="action_settings" translatable="true">Settings</string>
    <string name="action_share" translatable="true">Share</string>


    <!--Fragments titles-->
    <string name="title_view_fragment" translatable="true">View Note</string>
    <string name="title_add_fragment" translatable="true">Add Note</string>
    <string name="title_edit_fragment" translatable="true">Edit Note</string>

    <string name="body_description" translatable="true">Body Description!</string>
    <string name="note_title" translatable="true">Note Title</string>

    <!--Long press Menu-->
    <string name="delete_menu" translatable="true">Delete</string>
    <string name="edit_menu" translatable="true">Edit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="note_subject" translatable="true">Note Subject</string>
    <string name="note_body" translatable="true">Note body</string>


    <string name="new_note_body" translatable="true">New Note Body</string>

    <!--Buttons titles-->
    <string name="edit_note" translatable="true">Edit Note</string>
    <string name="save_note" translatable="true">Save Note</string>
    <string name="discard_note" translatable="true">Discard Note</string>
    <string name="delete_note" translatable="true">Delete Note</string>
    <string name="delete_record" translatable="true">Delete Record</string>
    <string name="delete_image" translatable="true">Delete Image</string>
    <string name="delete_video" translatable="true">Delete Video</string>
    <string name="attachments" translatable="true">Attachments</string>
    <string name="take_a_video" translatable="true">Take a video</string>
    <string name="take_a_photo" translatable="true">Take a photo</string>
    <string name="discard" translatable="true">Discard</string>
    <string name="gallery" translatable="true">Gallery</string>
    <string name="discard_q" translatable="true">Are you sure you want to discard the note?</string>
    <string name="confirm_btn" translatable="true">Confirm</string>
    <string name="cancel_btn" translatable="true">Cancel</string>
    <string name="this_note_has_an_audio_record" translatable="true">This note has an audio record!</string>
    <string name="cannot_find_image" translatable="true">The photo has been deleted from the phone\'s memory or cannot find!</string>
    <string name="stop_playing" translatable="true">Stop playing</string>
    <string name="start_playing" translatable="true">Start playing</string>
    <string name="delete" translatable="true">Delete</string>
    <string name="delete_q" translatable="true">Are you sure you want to delete this note?</string>
    <string name="audio_record_exist" translatable="true">This note has an audio record!\nYou can edit it or play the record.</string>
    <string name="stop_recording" translatable="true">Stop recording</string>
    <string name="start_recording" translatable="true">Start recording</string>
    <string name="audio_record_dont_exist" translatable="true">No audio record for this note!\nDo you want to record something?</string>
    <string name="image" translatable="true">Image</string>
    <string name="audio_file_cannot_be_found" translatable="true">Audio file cannot be found!</string>
    <string name="video_file_cannot_be_found" translatable="true">Video file cannot be found!</string>
    <string name="image_file_cannot_be_found" translatable="true">Image file cannot be found!</string>
    <string name="save" translatable="true">Save</string>
    <string name="save_q" translatable="true">Are you sure you want to save the note?</string>
    <string name="cannot_add_a_note_without_subject" translatable="true">Cannot add a note without subject!</string>
    <string name="note_deleted" translatable="true">Note deleted:</string>
    <string name="action_map" translatable="true">Map Location</string>
    <string name="title_activity_maps" translatable="true">Map</string>
</resources>
