<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentEnd="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentRight="true"
    android:layout_alignParentStart="true">

    <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="60dp"
        tools:context=".ViewFragment"
        tools:showIn="@layout/activity_edit">

        <ScrollView
            android:id="@+id/viewNoteScrollView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/viewNoteSubject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/note_subject"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </ScrollView>

        <ScrollView
            android:id="@+id/messageScrollView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/deleteNote"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/deleteNote"
            android:layout_below="@id/viewNoteScrollView"
            android:layout_marginTop="15dp">


            <TextView
                android:id="@+id/viewNoteBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="all"
                android:gravity="top"
                android:linksClickable="true"
                android:minLines="3"
                android:text="@string/note_body"
                android:textColor="#000000"
                android:textSize="14sp" />


        </ScrollView>

        <Button
            android:id="@+id/editNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/playStopAudioBTN"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/edit_note"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/deleteNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="false"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="false"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="false"
            android:layout_alignWithParentIfMissing="false"
            android:layout_below="@+id/playStopAudioBTN"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/delete_note"
            android:textColor="#ffffff" />

        <ImageView
            android:id="@+id/imageView_ViewFrag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="false"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="false"
            android:layout_alignWithParentIfMissing="false"
            android:layout_below="@+id/messageScrollView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="This note has an audio record!"
            android:id="@+id/audioRecordText"
            android:layout_below="@+id/imageView_ViewFrag"
            android:layout_centerHorizontal="true"
            android:textColor="#ff0000" />

        <Button
            android:id="@+id/playStopAudioBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#ff0000"
            android:text="Start Playing"
            android:textColor="#ffffff"
            android:layout_below="@+id/audioRecordText"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>
</ScrollView>