<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentEnd="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentRight="true"
    android:layout_alignParentStart="true">

    <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="60dp"
        tools:context=".EditFragment"
        tools:showIn="@layout/activity_edit">

        <ScrollView
            android:id="@+id/editNoteScrollView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editNoteSubject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/note_subject"
                android:inputType="textMultiLine|textCapSentences"
                android:minLines="2"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </ScrollView>

        <ScrollView
            android:id="@+id/messageScrollView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/editNoteScrollView"
            android:layout_marginTop="15dp">


            <EditText
                android:id="@+id/editNoteBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:gravity="top"
                android:hint="@string/new_note_body"
                android:inputType="textMultiLine|textCapSentences"
                android:minLines="3"
                android:textColor="#000000"
                android:textSize="14sp" />

        </ScrollView>

        <Button
            android:id="@+id/saveNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/messageScrollView"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/messageScrollView"
            android:layout_below="@+id/playStopRecordingBTN_EDIT"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/save_note"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/discardNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/playStopRecordingBTN_EDIT"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/discard_note"
            android:textColor="#ffffff" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/messageScrollView"
            android:clickable="true"
            android:paddingBottom="20dp" />

        <VideoView
            android:id="@+id/videoView_EDIT"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/imageView"
            android:layout_centerHorizontal="true"
            android:visibility="visible" />


        <TextView
            android:id="@+id/audioRecordTextEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/videoView_EDIT"
            android:layout_centerHorizontal="true"
            android:text="No audio record for this note!\nDo you want to record something?"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ff0000" />

        <Button
            android:id="@+id/playStopPlayingBTN_EDIT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/saveNote"
            android:layout_alignRight="@+id/saveNote"
            android:layout_below="@+id/audioRecordTextEdit"
            android:backgroundTint="#ff0000"
            android:text="Start Playing"
            android:textAlignment="center"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/playStopRecordingBTN_EDIT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/audioRecordTextEdit"
            android:backgroundTint="#ff0000"
            android:text="Start Recording"
            android:textAlignment="center"
            android:textColor="#ffffff" />


    </RelativeLayout>
</ScrollView>